@@ -102,6 +102,9 @@ char *strncatz (char *dest, const char *src, size_t n);
 /* return SDCC build number */
 const char *getBuildNumber (void);
 
+/* return SDCC build date */
+const char *getBuildDate (void);
+
 /* return environment used to build SDCC */
 const char *getBuildEnvironment(void);
 
